---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2021-12-30
  Changes:
    - Graphite compatibility - crucible
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2021-08-20
  Changes:
    - Minor refactor
    - Fix production deadlock with bio industries + silicon
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2021-07-21
  Changes:
    - Both foundry items are more expensive
    - Both foundry entities use more energy: burner doubled, electric quadrupled
  Features:
    - Setting to enable other "assembling machine" entities to do foundry tasks.
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2021-07-19
  Features:
    - Krastorio2 compatibility
    - Space Exploration/AAI compatibility
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2021-07-18
  Features:
    - Thumbnail
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2021-07-17
  Features:
    - New foundry building, coke (optional), updated recipes