@@ -1,1 +1,2 @@
 require("foundry-updates")
+require("refractory-updates")
