@@ -13,7 +13,8 @@ electric-foundry=For melting and casting metals, can also heat up other things.
 coke=A pure fuel and source of carbon.
 
 [recipe-name]
-solid-fuel-from-coal=Solid fuel from coal.
+solid-fuel-from-coal=Solid fuel from coal
+with-refractory=__1__ with refractory
 
 [recipe-description]
 solid-fuel-from-coal=Make solid fuel from coal, a wasteful process.
@@ -21,13 +22,16 @@ solid-fuel-from-coal=Make solid fuel from coal, a wasteful process.
 [technology-name]
 foundry=__ITEM__foundry__
 electric-foundry=__ITEM__electric-foundry__
+advanced-founding=Advanced founding
 
 [technology-description]
 foundry=Use heat for founding, coking, etc.
+advanced-founding=Alternate, efficient recipes for founding
 
 [mod-setting-name]
 bzfoundry-recipe-bypass=Bypass recipes
 bzfoundry-smelt=Foundry can smelt
+bzfoundry-plates=Add refractory recipes (experimental)
 bzfoundry-hydrocarbon=Hydrocarbon for founding
 bzfoundry-other-machines=Other machines that can do founding
 
@@ -36,3 +40,4 @@ bzfoundry-recipe-bypass=Skip modifying these recipes (comma-separated list).
 bzfoundry-smelt=If true, the foundry building can also handle raw ore smelting.
 bzfoundry-hydrocarbon=Which hydrocarbon to use for founding. The foundry building is also used for coking.\nIf [color=cyan]coke[/color], a coke item and recipe is added, if needed.\nIf [color=cyan]solid fuel[/color], an early but inefficient recipe is added.\nIf [color=cyan]coal[/color], that is used.\nIf [color=cyan]none[/color], no hydrocarbon is used in founding (not recommended).
 bzfoundry-other-machines=List of other "assembling-machine" entities that can do "founding" recipes. Eg. Krastorio2's "kr-advanced-furnace", or AAII's "industrial-furnace" (comma-separated list).
+bzfoundry-plates=[color=orange]EXPERIMENTAL[/color] Ingredients, products, or anything might change.\nRequires "Silica & Silicon", "Zirconium", or "Graphite & Diamonds" mod.\nUsing one or more refractories, Foundries can increase output of plates.\nBe warned, these are complex recipes.
