@@ -2,6 +2,10 @@ local me =  {}
 
 me.name = "bzfoundry"
 
+function me.founding_plates()
+  return me.get_setting("bzfoundry-plates")
+end
+
 function me.smelt()
   return me.get_setting("bzfoundry-smelt")
 end
